refactor: renaming and improving code consistency